RESOLVED FIXED61902
[EFL] No need to invalidate empty areas in ChromeClientEfl::invalidateContentsAndWindow
https://bugs.webkit.org/show_bug.cgi?id=61902
Summary [EFL] No need to invalidate empty areas in ChromeClientEfl::invalidateContent...
Ryuan Choi
Reported 2011-06-01 19:51:05 PDT
Just return when empty areas are required.
Attachments
Patch (1.45 KB, patch)
2011-06-01 19:56 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2011-06-01 19:56:36 PDT
Gyuyoung Kim
Comment 2 2011-06-01 21:40:25 PDT
Informal r+ on my part.
WebKit Commit Bot
Comment 3 2011-06-02 05:24:41 PDT
Comment on attachment 95707 [details] Patch Clearing flags on attachment: 95707 Committed r87898: <http://trac.webkit.org/changeset/87898>
WebKit Commit Bot
Comment 4 2011-06-02 05:24:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.