2011-06-02  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] No need to invalidate empty areas in ChromeClientEfl::invalidateContentsAndWindow
        https://bugs.webkit.org/show_bug.cgi?id=61902

        Just return to reduce unnecessary calls when invalidateContentsAndWindow
        received empty area.

        * WebCoreSupport/ChromeClientEfl.cpp:
        (WebCore::ChromeClientEfl::invalidateContentsAndWindow):

Canonical link: https://commits.webkit.org/77374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87898 268f45cc-cd09-0410-ab3c-d52691b4dbfc